# Youtube-CLI

./: .gitignore  README.md  main.py  player.py  pyproject.toml  requirements.txt  search.py  thumbnail.py  ui.py  utils.py
.github/workflows/: tests.yml
tests/: test_player.py  test_search.py  test_utils.py
