[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-cli"
version = "1.0.0"
description = "Terminal-native YouTube client"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2024.1.1",
    "textual>=0.52.0",
    "httpx>=0.27.0",
]

[project.scripts]
yt-cli = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*.py"]
